version/0.12/_sources/api/core/settings/_autosummary/api/solution_control.rst.txt
:orphan:

.. _solution_control:

solution_control
================

.. currentmodule:: ansys.systemcoupling.core.adaptor.api_25_2.solution_control

.. autoclass:: solution_control
    :show-inheritance:
    :undoc-members:
.. rubric:: Properties

duration_option : `str`
    Determine how the analysis duration is specified.
    
    Allowed values:
    
    - "EndTime" - Available for transient analyses. Execute coupling
      steps until the analysis reaches the specified end time.
    - "NumberOfSteps" - Perform coupling steps until the specified
      number of steps is reached.

end_time : :ref:`RealType<real_type>`
    Set co-simulation end time.

number_of_steps : `int`
    Set number of coupling steps.

time_step_size : :ref:`RealType<real_type>`
    Set coupling time step size.

minimum_iterations : `int`
    Set minimum iterations within coupling step.

maximum_iterations : `int`
    Set maximum iterations within coupling step.

use_ip_address_when_possible : `str`
    If True (the default), prefer to use IPv4 address rather than hostname for
    participant server connections. There is no guarantee that this request
    can be satisfied for all participants.

use_local_host_when_possible : `str`
    If ProgramControlled, use the default behavior for the platform. See
    the user documentation. A value of ON attempts to use the local host
    address rather than network address for participant server connections.
    There is no guarantee that this request can be satisfied for
    all participants.

write_participant_output_stream : `str`
    Controls whether participant output stream is directed to an output file.

.. rubric:: Children

========================================   ==========================================

Child                                                                         Summary

========================================   ==========================================
:ref:`available_ports <available_ports>`   Specify ports available for co-simulation.

========================================   ==========================================

.. rubric:: Included in:

==============================   =============

Parent                                 Summary

==============================   =============
:ref:`setup_root <setup_root>`   'root' object

==============================   =============

